--- a/pages/subpages/mine/merchant/subpages/meal-ticket-order/components/order-item/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/meal-ticket-order/components/order-item/index.wxml
@@ -10,7 +10,7 @@
     <view class="order-status">{{ORDER.statusDesc(item.status, true)}}</view>
   </view>
   <view class="order-content">
-    <meal-ticket-item ticketInfo="{{item.ticketInfo || null}}" />
+    <meal-ticket-item ticketInfo="{{item.ticketInfo || null}}" showRestaurantName />
   </view>
   <view class="order-footer">
     <view class="total-info row baseline">
