--- a/pages/subpages/mine/components/meal-ticket-item/index.wxml
+++ b/pages/subpages/mine/components/meal-ticket-item/index.wxml
@@ -3,7 +3,7 @@
     <image class="restaurant-cover" src="{{ticketInfo.restaurantCover}}" mode="aspectFill" lazy-load />
     <view class="ticket-info">
       <view class="ticket-name-wrap">
-        <view class="ticket-name {{showRestaurantName ? 'show-restaurant-name' : ''}}">
+        <view class="ticket-name omit {{showRestaurantName ? 'show-restaurant-name' : ''}}">
           <text wx:if="{{showRestaurantName}}">{{ticketInfo.restaurantName}} | </text>
           <text>{{ticketInfo.originalPrice}}元代金券</text>
         </view>
