--- a/pages/subpages/mine/components/set-meal-item/index.wxss
+++ b/pages/subpages/mine/components/set-meal-item/index.wxss
@@ -8,9 +8,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between; 
-  padding-right: 18rpx;
   flex: 1; 
-  height: 190rpx;
+  height: 188rpx;
 }
 .restaurant-name {
   margin-bottom: 8rpx;
@@ -39,17 +38,16 @@
   margin-top: 2rpx;
   margin-left: 12rpx;
   padding: 0 6rpx;
-  color: #F66B38;
+  color: var(--blue-4);
   font-size: 20rpx;
-  border: 1px solid #fed9cc;
+  border: 0.5px solid var(--blue-4);
   border-radius: 6rpx;
 }
 .count-wrap {
   font-size: 24rpx;
-  color: var(--blue-1);
+  color: #999;
 }
 .count {
   margin-left: 5rpx;
   font-size: 28rpx;
-  font-weight: 500;
 }
