feat: 附近媒体列表

--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -12,7 +12,7 @@
     </view>
     <view class="menu-tabs">
       <view 
-        wx:for="{{['关注', '发现']}}" 
+        wx:for="{{['关注', '发现', '附近']}}" 
         wx:key="index" 
         class="menu-tab {{curMenuIndex === index ? 'active' : ''}}" 
         bindtap="switchMenu" 
@@ -114,6 +114,39 @@
           generic:item="media-item" 
         />
         <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无游记" />
+      </view>
+    </scroll-view>
+  </swiper-item>
+  <swiper-item>
+    <scroll-view 
+      class="content-wrap" 
+      style="padding-top: {{statusBarHeight + 96}}px;"
+      refresher-triggered="{{nearbyRefreshing}}"
+      bindrefresherrefresh="onRefresh"
+      bindscrolltolower="onLoadMore"
+      bindscroll="onPageScroll"
+      refresher-enabled
+      scroll-y
+    >
+      <view class="content">
+        <fall-flow 
+          class="fall-flow" 
+          list="{{nearbyMediaList}}" 
+          loading="{{nearbyLoading}}"
+          finished="{{nearbyFinished}}"
+          generic:item="media-item" 
+        />
+        <view class="loading row center" wx:if="{{nearbyMediaList.length && nearbyLoading}}">
+          <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
+          <text>正在加载</text>
+        </view>
+        <view class="no-more-tips" wx:if="{{nearbyFinished && nearbyMediaList.length}}">～没有更多啦～</view>
+        <empty-illus 
+          wx:if="{{nearbyFinished && !nearbyMediaList.length}}" 
+          desc="暂无附近游记" 
+        >
+          <view class="postioning-btn row center" bindtap="openLocationSetting">开启定位</view>
+        </empty-illus>
       </view>
     </scroll-view>
   </swiper-item>
