feat: 附近媒体列表

--- a/components/media-item/index.wxml
+++ b/components/media-item/index.wxml
@@ -1,5 +1,5 @@
 <view class="media-item">
   <live-item wx:if="{{item.type === 1}}" item="{{item}}" mediaScene="{{mediaScene}}" />
-  <video-item wx:if="{{item.type === 2}}" item="{{item}}" mediaScene="{{mediaScene}}" />
-  <note-item wx:if="{{item.type === 3}}" item="{{item}}" mediaScene="{{mediaScene}}" />
+  <video-item wx:if="{{item.type === 2}}" item="{{item}}" mediaScene="{{mediaScene}}" showDistance="{{showDistance}}" />
+  <note-item wx:if="{{item.type === 3}}" item="{{item}}" mediaScene="{{mediaScene}}" showDistance="{{showDistance}}" />
 </view>
