--- a/components/fall-flow/index.wxml
+++ b/components/fall-flow/index.wxml
@@ -1,10 +1,10 @@
 <view class="fall-flow-wrap">
   <view class="fall-flow">
     <view class="left-list">
-      <item class="item" wx:for="{{leftList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" showShopInfo="{{showShopInfo}}" />
+      <item class="item" wx:for="{{leftList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" showShopInfo="{{showShopInfo}}" showDistance="{{showDistance}}" />
     </view>
     <view class="right-list">
-      <item class="item" wx:for="{{rightList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" showShopInfo="{{showShopInfo}}" />
+      <item class="item" wx:for="{{rightList}}" wx:key="index" item="{{item}}" mediaScene="{{mediaScene}}" data-info="{{item}}" showShopInfo="{{showShopInfo}}" showDistance="{{showDistance}}" />
     </view>
   </view>
   <view class="loading row center" wx:if="{{list.length && loading}}">
