--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -29,7 +29,8 @@
     </view>
     <view class="address-info" wx:if="{{item.address}}">
       <image class="address-icon" src="/images/address.png" />
-      <text class="address-detail omit single">{{item.address}}</text>
+      <view class="address-detail omit single">{{item.address}}</view>
+      <view class="address-distance" wx:if="{{showDistance}}">，距您{{distance}}km</view>
     </view>
   </view>
   <view class="note-title omit">{{item.title}}</view>
