--- a/pages/subpages/common/search/components/scenic-item/index.wxml
+++ b/pages/subpages/common/search/components/scenic-item/index.wxml
@@ -20,7 +20,7 @@
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
-      <view class="position-content">{{item.address}}，距您{{distance}}km</view>
+      <view class="position-content">{{item.address}}，距您{{distance}}</view>
     </view>
     <view class="price-info">
       <view class="sales">已售 13506</view>
