--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -30,7 +30,7 @@
     <view class="address-info" wx:if="{{item.address}}">
       <image class="address-icon" src="/images/address.png" />
       <view class="address-detail omit single">{{item.address}}</view>
-      <view class="address-distance" wx:if="{{showDistance}}">，距您{{distance}}km</view>
+      <view class="address-distance" wx:if="{{showDistance}}">，距您{{distance}}</view>
     </view>
   </view>
   <view class="note-title omit">{{item.title}}</view>
