--- a/pages/subpages/mall/components/hotel-item/index.wxml
+++ b/pages/subpages/mall/components/hotel-item/index.wxml
@@ -15,7 +15,7 @@
     <view class="hotel-distance-wrap row between">
       <view class="hotel-distance row">
         <image class="hotel-distance-icon" src="./images/position.png" />
-        <text>相距{{distance}}km</text>
+        <text>相距{{distance}}</text>
       </view>
       <view class="price-wrap row">
         <price-unit price="{{info.price || 0}}" fontSize="20rpx" integerFontSize="28rpx" />
