--- a/pages/subpages/mall/hotel/components/hotel-item/index.wxml
+++ b/pages/subpages/mall/hotel/components/hotel-item/index.wxml
@@ -16,7 +16,7 @@
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
-      <view class="position-content">{{item.address}}，距您{{distance}}km</view>
+      <view class="position-content">{{item.address}}，距您{{distance}}</view>
     </view>
     <view class="labels">
       <view class="label" wx:for="{{item.featureTagList}}" wx:key="index" wx:for-item="tag">{{tag}}</view>
