feat: 替换产品列表页返回icon

--- a/pages/subpages/mall/catering/index.wxml
+++ b/pages/subpages/mall/catering/index.wxml
@@ -2,10 +2,10 @@
 
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px;">
   <view class="search-bar-wrap">
-    <image class="back-icon" src="https://img.ubo.vip/tiddler/nav-icon/back.png" bindtap="navBack" />
+    <back-icon />
     <view class="search-bar" bindtap="search">
-      <image class="search-icon" src="https://img.ubo.vip/tiddler/nav-icon/search.png" />
-      <text class="placeholder">搜索餐厅</text>
+      <image class="search-icon" src="/images/search.png" />
+      <text class="placeholder">搜索餐厅美食</text>
     </view>
   </view>
 
