--- a/pages/subpages/mall/hotel/index.wxss
+++ b/pages/subpages/mall/hotel/index.wxss
@@ -11,31 +11,26 @@
   display: flex;
   align-items: center;
   height: 44px;
-}
-.back-icon {
-  margin-left: 8px;
-  width: 20px;
-  height: 20px;
+  padding-left: 8px;
 }
 .search-bar {
   display: flex;
   align-items: center;
   margin-left: 16rpx;
   padding-left: 32rpx;
-  width: 468rpx;
+  width: 400rpx;
   height: 36px;
   border-radius: 18px;
   background: #f5f6f7;
 }
 .calendar-bar {
-  padding-right: 20rpx;
-  border-right: 1px solid #e1e1e1;
+  padding-right: 24rpx;
+  border-right: 0.5px solid #e1e1e1;
 }
 .calendar-item {
   color: var(--blue-1);
-  font-size: 10px;
+  font-size: 18rpx;
   font-weight: bold;
-  line-height: 1.2;
 }
 .search-icon {
   margin-left: 10px;
