--- a/pages/subpages/mall/goods/index.wxss
+++ b/pages/subpages/mall/goods/index.wxss
@@ -11,18 +11,14 @@
   display: flex;
   align-items: center;
   height: 44px;
-}
-.back-icon {
-  margin-left: 8px;
-  width: 20px;
-  height: 20px;
+  padding-left: 8px;
 }
 .search-bar {
   display: flex;
   align-items: center;
   margin-left: 8px;
   padding-left: 12px;
-  width: 350rpx;
+  width: 320rpx;
   height: 36px;
   border-radius: 18px;
   background: #f5f6f7;
@@ -36,22 +32,28 @@
   color: #666;
   font-size: 14px;
 }
+
+
 .cart-icon-wrap {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-left: 8px;
-  width: 22px;
-  height: 22px;
-  font-size: 0;
-  overflow: initial;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 0.5px solid #e1e1e1;
+  background: rgba(255, 255, 255, 0.6);
 }
 .cart-icon {
-  width: 100%;
-  height: 100%;
+  width: 22px;
+  height: 22px;
 }
 .cart-count {
   position: absolute;
-  top: -10rpx;
-  right: -16rpx;
+  top: -3px;
+  right: -6px;
   padding: 0 10rpx;
   height: 30rpx;
   color: #fff;
