--- a/pages/tab-bar-pages/home/components/top-media/index.wxss
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxss
@@ -1,20 +1,20 @@
 .top-media-wrap {
   position: relative;
   margin-bottom: 15rpx;
-  height: 468rpx;
+  height: 440rpx;
   text-shadow: 0 0 1px #999;
   border-radius: 40rpx;
   overflow: hidden;
 }
 .top-media-swiper {
-  height: 468rpx;
+  height: 440rpx;
 }
 .top-media {
   position: relative;
 }
 .top-media-cover {
   width: 100%;
-  height: 468rpx;
+  height: 440rpx;
   border-radius: 40rpx;
 }
 
@@ -71,12 +71,13 @@
 .top-media-info {
   position: absolute;
   left: 0;
-  bottom: 100rpx;
-  padding: 24rpx;
+  bottom: 0;
+  padding: 24rpx 24rpx 120rpx;
   width: 100%;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
 }
 .top-media-title {
+  margin-bottom: 18rpx;
   flex: 1;
   color: #fff;
   font-size: 28rpx;
@@ -108,6 +109,7 @@
   height: 100rpx;
   width: 100%;
   backdrop-filter: blur(10px);
+  border-radius: 40rpx 40rpx 0 0;
 }
 .top-media-menu-item {
   width: 100rpx;
