--- a/pages/tab-bar-pages/home/components/ai-tag/index.wxml
+++ b/pages/tab-bar-pages/home/components/ai-tag/index.wxml
@@ -1,6 +1,6 @@
-<view class="ai-tag">
+<view class="ai-tag  {{scrolling ? 'small' : ''}}">
   <image class="robot-avatar" src="https://static.tiddler.cn/mp/ai/logo.png" />
-  <view class="tag-title-swiper">
+  <view class="tag-title-swiper {{scrolling ? 'hide' : ''}}">
     <view class="tag-title">AI·小鱼</view>
     <view class="tag-title">智能助手</view>
     <view class="tag-title">立即体验</view>
