--- a/pages/subpages/common/ai-chat/components/comment-list/index.wxss
+++ b/pages/subpages/common/ai-chat/components/comment-list/index.wxss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 24rpx;
+  margin: 0 24rpx 24rpx;
 }
 .msg-detail {
   display: flex;
@@ -26,13 +26,16 @@
   color: #262626;
   font-size: 28rpx;
   line-height: 44rpx;
+  background: #fff;
+  border-radius: 4rpx 32rpx 32rpx 32rpx;
+}
+.content.opening-remarks {
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(8px);
-  border-radius: 4rpx 32rpx 32rpx 32rpx;
 }
 .content.mine {
   color: #fff;
-  background-color: #1F85FE;
+  background: var(--blue-1);
   border-radius: 32rpx 4rpx 32rpx 32rpx;
 }
 
@@ -45,7 +48,7 @@
   flex: 1;
 }
 .robot-name {
-  color: #333;
+  color: #262626;
   font-size: 34rpx;
   font-weight: bold;
 }
@@ -75,7 +78,7 @@
 }
 .question-content {
   flex: 1;
-  color: #333;
+  color: #262626;
   font-size: 28rpx;
   font-weight: 500;
 }
