--- a/pages/subpages/common/ai-chat/components/comment-list/index.wxss
+++ b/pages/subpages/common/ai-chat/components/comment-list/index.wxss
@@ -34,6 +34,7 @@
   backdrop-filter: blur(8px);
 }
 .content.mine {
+  max-width: 80%;
   color: #fff;
   background: var(--blue-1);
   border-radius: 32rpx 4rpx 32rpx 32rpx;
