--- a/pages/subpages/common/ai-chat/components/comment-list/index.wxss
+++ b/pages/subpages/common/ai-chat/components/comment-list/index.wxss
@@ -23,6 +23,7 @@
 .content {
   position: relative;
   padding: 24rpx;
+  max-width: 100%;
   color: #262626;
   font-size: 28rpx;
   line-height: 44rpx;
