--- a/pages/subpages/common/ai-chat/index.wxml
+++ b/pages/subpages/common/ai-chat/index.wxml
@@ -14,6 +14,7 @@
   <comment-list
     class="comment" 
     msgList="{{msgList || []}}" 
+    bind:sendTip="chatWithTip"
     bindtap="blurInput" 
   />
 
